starlark_syntax/src/syntax/grammar_tests/error_rd_not_without_in.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Program:
_ = a not b

Error:
error: Parse error: unexpected identifier 'b', expected 'in' after 'not'
 --> error_rd_not_without_in:1:11
  |
1 | _ = a not b
  |           ^
  |
